package = 'clawpack.visclaw'
pkg_dir = join_paths(package.split('.'))

python_sources = [
  'Iplotclaw.py',
  '__init__.py',
  'animation_tools.py',
  'colormaps.py',
  'data.py',
  'frametools.py',
  'gauge_interp.py',
  'gaugetools.py',
  'geoplot.py',
  'gridtools.py',
  'ianimate.py',
  'iplot.py',
  'ipyclaw.py',
  'legend_tools.py',
  'make_anim.py',
  'multiframetools.py',
  'particle_tools.py',
  'plot_timing_stats.py',
  'plotclaw.py',
  'plotfg.py',
  'plotpages.py',
  'plottools.py',
  'setplot_default.py',
]

py.install_sources(
  python_sources,
  subdir: pkg_dir,
)

